# ChessEndgames

./: CMakeLists.txt  PawnBoard.h  TranspositionTable.h  main.cpp
